--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
     "js-sha1": "^0.6.0",
+    "node-sass": "^4.14.1",
     "svg-sprite-loader": "^5.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
